# cc-web

./: README.md  pyproject.toml
qiyasPortfolio/: db.sqlite3  manage.py
qiyasPortfolio/portfolioApp/: admin.py  apps.py  components.py  models.py  serializers.py  views.py
qiyasPortfolio/portfolioApp/migrations/: 0001_initial.py  0002_remove_userprofile_abouttext_and_more.py
qiyasPortfolio/portfolioApp/templates/: index.html
qiyasPortfolio/qiyasPortfolio/: asgi.py  settings.py  urls.py  wsgi.py
